--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
                             <mainClass>mapreduce.TestWordCountAndFrequency</mainClass>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>multinodes</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>mapreduce.MapReduceMultiNodes</mainClass>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
