--- a/MapReduceKafka/pom.xml
+++ b/MapReduceKafka/pom.xml
@@ -50,7 +50,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.votre.entreprise.MasterKafka</mainClass>
+                                    <mainClass>MapReduceKafka.MasterKafka</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
